--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,17 @@ plugins {
 }
 
 android {
-    namespace 'com.cst2335.vasa0007'
-    compileSdk 32
+    namespace 'algonquin.cst2335.vasa0007'
+    compileSdk 33
+
+    dataBinding{
+        enabled = true;
+    }
 
     defaultConfig {
-        applicationId "com.cst2335.vasa0007"
-        minSdk 27
-        targetSdk 32
+        applicationId "algonquin.cst2335.lee00824"
+        minSdk 22
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -27,13 +31,27 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+android.applicationVariants.all { variant ->
+    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+        description "Generates Javadoc for $variant.name."
 
+        source = variant.javaCompile.source
+        destinationDir = file("$rootDir/javadoc/")
+        failOnError false
+
+        doFirst {
+            ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+            classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+            options.addStringOption "-show-members", "package"
+        }
+    }}
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.+'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
