--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabs"
         tools:targetApi="31">
+        <activity
+            android:name=".ChatRoom"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -27,15 +38,15 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
-        <activity android:name=".ProfileActivity" android:exported="true">
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.example.app.PROFILE_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
