--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:theme="@style/Theme.AndroidLabs"
         tools:targetApi="31">
         <activity
-            android:name="com.cst2335.vasa0007.ChatRoom"
+            android:name=".ChatRoomViewModel"
+            android:exported="false" />
+        <activity
+            android:name=".ChatRoom"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
