--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="algonquin.cst2335.vasa0007">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -16,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabs"
         tools:targetApi="31">
+        <activity
+            android:name=".ChatMessage"
+            android:exported="false" />
         <activity
             android:name=".ChatRoomViewModel"
             android:exported="false" />
